<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_replay_import"
        android:title="@string/replay_list_import"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_replay_delete_7"
        android:title="@string/replay_delete_older_7"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_replay_delete_30"
        android:title="@string/replay_delete_older_30"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_replay_delete_all"
        android:title="@string/replay_delete_all"
        app:showAsAction="never"/>
</menu>
